src/minipython/antlr/MiniPythonParser.java
// Generated from java-escape by ANTLR 4.11.1
package minipython.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiniPythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FAULT_INTEGER=1, INTEGER=2, ID=3, OPENING=4, CLOSING=5, LBRACKET=6, RBRACKET=7, 
		PLUS=8, MINUS=9, MULTIPLY=10, DIVIDE=11, PERCENT=12, ASSIGMENT=13, PARAMETERLIST=14, 
		METHODOPERATOR=15, LOWER_THEN=16, LOWER_EQUALS=17, GREATER_THEN=18, GREATER_EQUALS=19, 
		NOT_EQUALS=20, EQUALS=21, BOOLEAN=22, ENDOFLINE=23;
	public static final int
		RULE_parenthesized = 0, RULE_variable = 1, RULE_number = 2, RULE_boolean = 3, 
		RULE_atom = 4, RULE_tupleListItem = 5, RULE_tupleList_ = 6, RULE_tupleList = 7, 
		RULE_tupleCall = 8, RULE_listListItem = 9, RULE_listList_ = 10, RULE_listList = 11, 
		RULE_listCall = 12, RULE_reference = 13, RULE_negativeFactor = 14, RULE_factor = 15, 
		RULE_multiplication = 16, RULE_division = 17, RULE_remainder = 18, RULE_product_ = 19, 
		RULE_product = 20, RULE_addition = 21, RULE_substaction = 22, RULE_sum_ = 23, 
		RULE_sum = 24, RULE_lowerThen = 25, RULE_lowerEquals = 26, RULE_greaterThen = 27, 
		RULE_greaterEquals = 28, RULE_notEquls = 29, RULE_equals = 30, RULE_comparison_ = 31, 
		RULE_comparison = 32, RULE_operation = 33, RULE_tupleUnpackingListParameter = 34, 
		RULE_tupleUnpackingList_ = 35, RULE_tupleUnpackingList = 36, RULE_tupleUnpacking = 37, 
		RULE_variableAssigment_ = 38, RULE_variableAssigment = 39, RULE_assigment = 40, 
		RULE_statement = 41, RULE_statements_ = 42, RULE_statements = 43, RULE_start = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"parenthesized", "variable", "number", "boolean", "atom", "tupleListItem", 
			"tupleList_", "tupleList", "tupleCall", "listListItem", "listList_", 
			"listList", "listCall", "reference", "negativeFactor", "factor", "multiplication", 
			"division", "remainder", "product_", "product", "addition", "substaction", 
			"sum_", "sum", "lowerThen", "lowerEquals", "greaterThen", "greaterEquals", 
			"notEquls", "equals", "comparison_", "comparison", "operation", "tupleUnpackingListParameter", 
			"tupleUnpackingList_", "tupleUnpackingList", "tupleUnpacking", "variableAssigment_", 
			"variableAssigment", "assigment", "statement", "statements_", "statements", 
			"start"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'('", "')'", "'['", "']'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'='", "','", "'.'", "'<'", "'<='", "'>'", "'>='", "'!='", 
			"'=='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FAULT_INTEGER", "INTEGER", "ID", "OPENING", "CLOSING", "LBRACKET", 
			"RBRACKET", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "PERCENT", "ASSIGMENT", 
			"PARAMETERLIST", "METHODOPERATOR", "LOWER_THEN", "LOWER_EQUALS", "GREATER_THEN", 
			"GREATER_EQUALS", "NOT_EQUALS", "EQUALS", "BOOLEAN", "ENDOFLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniPythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParenthesizedContext extends ParserRuleContext {
		public TerminalNode OPENING() { return getToken(MiniPythonParser.OPENING, 0); }
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public TerminalNode CLOSING() { return getToken(MiniPythonParser.CLOSING, 0); }
		public ParenthesizedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parenthesized; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitParenthesized(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParenthesizedContext parenthesized() throws RecognitionException {
		ParenthesizedContext _localctx = new ParenthesizedContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parenthesized);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(OPENING);
			setState(91);
			operation();
			setState(92);
			match(CLOSING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MiniPythonParser.ID, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(MiniPythonParser.INTEGER, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_number);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanContext extends ParserRuleContext {
		public TerminalNode BOOLEAN() { return getToken(MiniPythonParser.BOOLEAN, 0); }
		public BooleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitBoolean(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanContext boolean_() throws RecognitionException {
		BooleanContext _localctx = new BooleanContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_boolean);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(BOOLEAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtomContext extends ParserRuleContext {
		public ParenthesizedContext parenthesized() {
			return getRuleContext(ParenthesizedContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public BooleanContext boolean_() {
			return getRuleContext(BooleanContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_atom);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPENING:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				parenthesized();
				}
				break;
			case INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				number();
				}
				break;
			case BOOLEAN:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				boolean_();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TupleListItemContext extends ParserRuleContext {
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public TupleListItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tupleListItem; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitTupleListItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TupleListItemContext tupleListItem() throws RecognitionException {
		TupleListItemContext _localctx = new TupleListItemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tupleListItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			operation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TupleList_Context extends ParserRuleContext {
		public TerminalNode PARAMETERLIST() { return getToken(MiniPythonParser.PARAMETERLIST, 0); }
		public TupleListItemContext tupleListItem() {
			return getRuleContext(TupleListItemContext.class,0);
		}
		public TupleList_Context tupleList_() {
			return getRuleContext(TupleList_Context.class,0);
		}
		public TupleList_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tupleList_; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitTupleList_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TupleList_Context tupleList_() throws RecognitionException {
		TupleList_Context _localctx = new TupleList_Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_tupleList_);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PARAMETERLIST:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(108);
				match(PARAMETERLIST);
				setState(109);
				tupleListItem();
				setState(110);
				tupleList_();
				}
				}
				break;
			case CLOSING:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TupleListContext extends ParserRuleContext {
		public TupleListItemContext tupleListItem() {
			return getRuleContext(TupleListItemContext.class,0);
		}
		public TupleList_Context tupleList_() {
			return getRuleContext(TupleList_Context.class,0);
		}
		public TerminalNode PARAMETERLIST() { return getToken(MiniPythonParser.PARAMETERLIST, 0); }
		public TupleListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tupleList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitTupleList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TupleListContext tupleList() throws RecognitionException {
		TupleListContext _localctx = new TupleListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tupleList);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(115);
				tupleListItem();
				setState(116);
				tupleList_();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(118);
				tupleListItem();
				setState(119);
				match(PARAMETERLIST);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TupleCallContext extends ParserRuleContext {
		public TerminalNode OPENING() { return getToken(MiniPythonParser.OPENING, 0); }
		public TupleListContext tupleList() {
			return getRuleContext(TupleListContext.class,0);
		}
		public TerminalNode CLOSING() { return getToken(MiniPythonParser.CLOSING, 0); }
		public TupleCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tupleCall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitTupleCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TupleCallContext tupleCall() throws RecognitionException {
		TupleCallContext _localctx = new TupleCallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tupleCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(OPENING);
			setState(125);
			tupleList();
			setState(126);
			match(CLOSING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListListItemContext extends ParserRuleContext {
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public ListListItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listListItem; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitListListItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListListItemContext listListItem() throws RecognitionException {
		ListListItemContext _localctx = new ListListItemContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listListItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			operation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListList_Context extends ParserRuleContext {
		public TerminalNode PARAMETERLIST() { return getToken(MiniPythonParser.PARAMETERLIST, 0); }
		public ListListItemContext listListItem() {
			return getRuleContext(ListListItemContext.class,0);
		}
		public ListList_Context listList_() {
			return getRuleContext(ListList_Context.class,0);
		}
		public ListList_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listList_; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitListList_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListList_Context listList_() throws RecognitionException {
		ListList_Context _localctx = new ListList_Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_listList_);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PARAMETERLIST:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(130);
				match(PARAMETERLIST);
				setState(131);
				listListItem();
				setState(132);
				listList_();
				}
				}
				break;
			case RBRACKET:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListListContext extends ParserRuleContext {
		public ListListItemContext listListItem() {
			return getRuleContext(ListListItemContext.class,0);
		}
		public ListList_Context listList_() {
			return getRuleContext(ListList_Context.class,0);
		}
		public ListListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitListList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListListContext listList() throws RecognitionException {
		ListListContext _localctx = new ListListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_listList);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
			case ID:
			case OPENING:
			case MINUS:
			case BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(137);
				listListItem();
				setState(138);
				listList_();
				}
				}
				break;
			case RBRACKET:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListCallContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(MiniPythonParser.LBRACKET, 0); }
		public ListListContext listList() {
			return getRuleContext(ListListContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(MiniPythonParser.RBRACKET, 0); }
		public ListCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listCall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitListCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListCallContext listCall() throws RecognitionException {
		ListCallContext _localctx = new ListCallContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_listCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(LBRACKET);
			setState(144);
			listList();
			setState(145);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReferenceContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public ReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reference; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReferenceContext reference() throws RecognitionException {
		ReferenceContext _localctx = new ReferenceContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_reference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			atom();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NegativeFactorContext extends ParserRuleContext {
		public TerminalNode MINUS() { return getToken(MiniPythonParser.MINUS, 0); }
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public NegativeFactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negativeFactor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitNegativeFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NegativeFactorContext negativeFactor() throws RecognitionException {
		NegativeFactorContext _localctx = new NegativeFactorContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_negativeFactor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(MINUS);
			setState(150);
			reference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FactorContext extends ParserRuleContext {
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public NegativeFactorContext negativeFactor() {
			return getRuleContext(NegativeFactorContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_factor);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
			case ID:
			case OPENING:
			case BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				reference();
				}
				break;
			case MINUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				negativeFactor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiplicationContext extends ParserRuleContext {
		public TerminalNode MULTIPLY() { return getToken(MiniPythonParser.MULTIPLY, 0); }
		public ProductContext product() {
			return getRuleContext(ProductContext.class,0);
		}
		public MultiplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplication; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitMultiplication(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplicationContext multiplication() throws RecognitionException {
		MultiplicationContext _localctx = new MultiplicationContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_multiplication);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(MULTIPLY);
			setState(157);
			product();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DivisionContext extends ParserRuleContext {
		public TerminalNode DIVIDE() { return getToken(MiniPythonParser.DIVIDE, 0); }
		public ProductContext product() {
			return getRuleContext(ProductContext.class,0);
		}
		public DivisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_division; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitDivision(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DivisionContext division() throws RecognitionException {
		DivisionContext _localctx = new DivisionContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_division);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(DIVIDE);
			setState(160);
			product();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RemainderContext extends ParserRuleContext {
		public TerminalNode PERCENT() { return getToken(MiniPythonParser.PERCENT, 0); }
		public ProductContext product() {
			return getRuleContext(ProductContext.class,0);
		}
		public RemainderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_remainder; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniPythonVisitor ) return ((MiniPythonVisitor<? extends T>)visitor).visitRemainder(this);
			else return visitor.visitChildren(this);
		}
	}
